<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">随&#160;&#160;记</string>
    <string name="type_default">默认分类</string>
    <string name="menu_record">add</string>
    <string name="menu_record_add">新增分类</string>
    <string name="title_record_add">新增记事</string>
    <string name="menu_msg">消息中心</string>
    <string name="menu_exit_login">切换账号</string>
    <string name="menu_set">设置</string>
    <string name="tip_building">暂未开放</string>
    <string name="save_sucess">保存成功</string>
    <string name="tip_input_type">输入分类名称</string>
    <!--  -->
    <string name="weather_fail">获取天气失败</string>
    <!--  -->
    <string name="time">时间段</string>
    <string name="lotleft">车位数</string>
    <string name="order_num">预定数</string>
    <string name="time_desc">备注</string>
    <string name="time_work">工作日</string>
    <string name="time_week">周末</string>
    <string name="time_date">节假日</string>
    <string name="scan_record">扫描记录</string>
    <string name="scan_result">扫描结果</string>
    <string name="scan_fail">扫描失败：</string>
    <string name="scan_sucess_enter">扫描订单成功，可以进场</string>
    <string name="scan_sucess_exit">扫描订单成功，可以离场</string>
    <string name="scan_order_over">订单已结束</string>
    <string name="key_enter">进场记录</string>
    <string name="key_exit">离场记录</string>
    <string name="key_scan_time">扫码时间：</string>
    <string name="key_plate">车牌号：</string>
    <string name="key_phone">手机号：</string>
    <!--  -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新&#8230;</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开立即刷新</string>
    <string name="refreshing">正在刷新数据中&#8230;</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载更多的数据&#8230;</string>
    <string name="loading_more">正在加载数据&#8230;</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <!--  -->
    <string name="login_hint_account">输入密码</string>
    <string name="login_hint_pwd">请输入管理员密码</string>
    <string name="hint_title">标题</string>
    <!--  -->
    <!-- activity about -->
    <string name="about_cha_pub_num">微信公众号</string>
    <string name="about_weburl">Copyright&#160;©&#160;2015&#160;ZhouFeng&#160;Tech.&#160;All&#160;rights&#160;reserved.</string>
    <string name="about_phone">客服电话：400&#8211;008&#8211;2332</string>
    <string name="about_copyright">骤风信息科技(上海)有限公司</string>
    <!-- activity detail line -->
    <!-- 登陆注册 -->
    <string name="key_save">保&#160;&#160;存</string>
    <string name="key_login">进&#160;&#160;&#160;&#160;入</string>
    <string name="login_sucess">登录成功</string>
    <string name="login_fail">登录失败，身份信息为空</string>
    <string name="login_out_tip">退出登录将清除记录扫描的订单信息，确认退出？</string>
    <string name="key_confirm">确定</string>
    <string name="key_cancel">取消</string>
    <string name="tip_exit">再按一次退出程序</string>
    <string name="networkError">网络未连接</string>
    <string name="networkError2">网络连接失败,请稍后重试</string>
    <string name="error_Msg_phonenotnull">手机号码不能为空</string>
    <string name="login_tip_pwd_null">请输入密码</string>
    <string name="login_tip_pwd_wrong">密码错误</string>
    <string name="key_unknown">未知</string>
    <string name="key_unknown2">--</string>
    <string name="title_about">关于</string>
    <string name="title_check_update">检查更新</string>
    <string name="tip_check_version">正在检查更新&#8230;</string>
    <string name="tip_version_new">已是最新版本</string>
    <string name="tip_no_network">网络未连接，请检查网络后重试</string>
    <string name="tip_network_weak">当前网络环境较差</string>
    <string name="error_server">服务器连接失败，点击刷新或稍后重试</string>
    <string name="error_network">网络出错，点击刷新或稍后重试</string>
    <string name="error_nodata">暂无更多数据</string>
    <string name="key_loading">正在加载&#8230;&#8230;</string>
    <string name="exc_base">请求失败</string>

</resources>