<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/item_time"
        style="@style/textview_common"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:hint="@string/time"
        android:textColor="@color/text_gray" />

    <TextView
        android:id="@+id/item_lotleft"
        style="@style/textview_common"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/lotleft"
        android:textColor="@color/text_gray" />

    <TextView
        android:id="@+id/item_order"
        style="@style/textview_common"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:hint="@string/order_num"
        android:textColor="@color/theme_color" />

    <TextView
        android:id="@+id/item_desc"
        style="@style/textview_common"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/time_desc"
        android:textColor="@color/text_gray" />

</LinearLayout>