<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:paddingLeft="@dimen/space_larger"
        android:paddingRight="@dimen/space_larger" >

        <TextView
            android:id="@+id/main_title"
            style="@style/textview_common"
            android:layout_height="@dimen/layout_titile_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="@dimen/space_small"
            android:text="@string/type_default"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_title" />

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/main_title"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/main_title"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/menu_toggle" />

        <TextView
            android:id="@+id/img_menu_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/main_title"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/main_title"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:gravity="center_vertical"
            android:text="@string/title_record_add"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_nomal" />
    </RelativeLayout>

    <com.ma.text.widget.listview.XListView
        android:id="@+id/record_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/space_larger"
        android:layout_marginRight="@dimen/space_larger"
        android:layout_marginTop="@dimen/space_normal"
        android:divider="@color/common_bg"
        android:listSelector="@android:color/transparent"
        android:dividerHeight="@dimen/dimen_divider"
        android:scrollbars="none" />

</LinearLayout>